add hard and evil example

--- a/app/views/sudoku/_example.html.erb
+++ b/app/views/sudoku/_example.html.erb
@@ -1,6 +1,6 @@
 <div class="examples">
 <%= link_to "Easy",easy_path, class: "btn btn-success" %>
 <%= link_to "Medium",medium_path, class: "btn btn-warning" %>
-<%= link_to "Hard",easy_path, class: "btn btn-danger" %>
-<%= link_to "Evil",easy_path, class: "btn btn-danger" %>
+<%= link_to "Hard",hard_path, class: "btn btn-danger" %>
+<%= link_to "Evil",evil_path, class: "btn btn-danger" %>
 </div>
